// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineup details tests single decorated artist (decorateArtist) artist with slice return artist with multiple slice decorators 1`] = `
<DocumentFragment>
  <li
    class="lineupArtists__artist lineupArtists__artist--lvl1"
  >
    Zbigniew Wodeski 
    <span
      class="lineupArtists__slice lineupArtists__slice--down"
    >
      with
    </span>
     Mitch & Mitch 
    <span
      class="lineupArtists__slice lineupArtists__slice--multiline"
    >
      Orchestra and Choir
    </span>
  </li>
</DocumentFragment>
`;

exports[`lineup details tests single decorated artist (decorateArtist) return artist with position options display artist broken on two lines 1`] = `
<DocumentFragment>
  <li
    class="lineupArtists__artist lineupArtists__artist--lvl1 lineupArtists__artist--nextLineArtist"
    data-next-line-artist="Pink Freud"
  >
    Bokka
  </li>
  <li
    class="lineupArtists__artist lineupArtists__artist--lvl1"
  >
    <span
      class="lineupArtists__slice lineupArtists__slice--previousLine"
    >
      Pink Freud
    </span>
     Plays Autechre
  </li>
</DocumentFragment>
`;

exports[`lineup details tests single decorated artist (decorateArtist) return artist with position options display artist with new line 1`] = `
<DocumentFragment>
  <li
    class="lineupArtists__newLine"
  />
  <li
    class="lineupArtists__artist lineupArtists__artist--undefined"
  >
    Teatr Snów: przedstawienie Republika Marzeń
  </li>
</DocumentFragment>
`;

exports[`lineup details tests single decorated artist (decorateArtist) return artist with position options display artist with separator 1`] = `
<DocumentFragment>
  <li
    class="lineupArtists__separatorElement lineupArtists__separatorElement--lvl1"
  />
  <li
    class="lineupArtists__artist lineupArtists__artist--lvl1"
  >
    Pearl Jam
  </li>
</DocumentFragment>
`;

exports[`lineup details tests single decorated artist (decorateArtist) return artist with position options display artist with turned off separator 1`] = `
<DocumentFragment>
  <li
    class="lineupArtists__artist lineupArtists__artist--lvl1"
  >
    Prince
  </li>
</DocumentFragment>
`;
